# fmi-weather

./: CMakeLists.txt
conf/: fmi-weather.conf
scripts/: build-exe.ps1  rebuild.ps1
src/: CMakeLists.txt  fmi_client.c  fmi_client.h  fmi_weather.c  fmi_weather.h  fmiw_conf.c  fmiw_conf.h  main.c
